--- a/index.html
+++ b/index.html
@@ -4,26 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lumiere</title>
-    <link rel="stylesheet"href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <a href="#" class="nav-logo">
-          <h2 class="logo-text">Lu<span>miere</span></h2>
-        </a>
-        <ul class="nav-menu">
-          <li class="nav-item">
-            <a href="#" class="nav-link">Beranda</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Proses Desain</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Produk</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+   <nav class="navbar">
+     <a href="#" class="navbar-logo">Lumiere</a>
+     <div class="navbar-nav">
+       <a href="#">Beranda</a>
+       <a href="#desain">Proses Desain</a>
+       <a href="#produk">Products</a>
+       
   </body>
 </html>
