--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <div class="navbar-nav">
        <a href="#">Beranda</a>
        <a href="#desain">Proses Desain</a>
-       <a href="#produk">Products</a>
+       <a href="#produk">Produk</a>
        
   </body>
 </html>
