--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
    <nav class="navbar">
-     <a href="#" class="navbar-logo">Lumiere</a>
+     <a href="#" class="navbar-logo">Lu<span>miere</span></a>
      <div class="navbar-nav">
        <a href="#">Beranda</a>
        <a href="#desain">Proses Desain</a>
