--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
        <a href="#">Beranda</a>
        <a href="#desain">Proses Desain</a>
        <a href="#produk">Produk</a>
+     </div>
+     </nav>
+
+     <main>
+      <section id="#" class="hero">
+        <h1>Kenalan yuk!</h1>
+<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https://www.canva.com/design/DAGWgZd5au0/5rlfeboWrUs0wudzxcA2_A/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGWgZd5au0&#x2F;5rlfeboWrUs0wudzxcA2_A&#x2F;view?utm_content=DAGWgZd5au0&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Lumiere Members Introduction </a> by Azalya Jihannaura.
+        </section>
+
+      <section id="desain" class="design-process">
+        <h2>Bagaimana Kami Berkreasi</h2>
+        <p>Pelajari alur kerja kami dari ide hingga implementasi.</p>
+        </section>
+
+      <section id="produk" class="products-showcase">
+        <h2>Koleksi Produk Kami</h2>
+        <p>Lihat berbagai produk yang telah kami hasilkan.</p>
+        </section>
+    </main>
        
   </body>
 </html>
