--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lumiere</title>
+    <style>
+        #hero h1 {margin-top: 50px;}
+    </style>
     <link rel="stylesheet"href="style.css"/>
   </head>
   <body>
