--- a/index.html
+++ b/index.html
@@ -35,10 +35,20 @@
 
       <section id="desain" class="design-process">
         <h2>WOW...Program apa yang akan kami buat? 🔍</h2>
+<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https://www.canva.com/design/DAGpzw37C6w/JmLO_eAwuIGgjxOyvjpXkQ/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGpzw37C6w&#x2F;JmLO_eAwuIGgjxOyvjpXkQ&#x2F;view?utm_content=DAGpzw37C6w&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Engineering Design Process Kel. 5 XD - Informatika</a> by Adzra Hafizhah.
        </section>
 
       <section id="produk" class="products-showcase">
         <h2>Lihat & Coba Produk Kami!</h2>
+        <p>Made by. Muhammad Taqi Kusumaputra</p>
+<iframe src="https://scratch.mit.edu/projects/1186500424/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
        </section>
     </main>
        
